--- a/src/app/pages/ourservices/ourservices.component.html
+++ b/src/app/pages/ourservices/ourservices.component.html
@@ -1,10 +1,10 @@
- <section class="container-services text-[#FCFAF8] flex flex-col justify-center items-center " >
-    <div class=" flex flex-col gap-8 py-28">
+ <section class="container-services text-[#FCFAF8] flex  md:flex-col justify-center items-center  " >
+    <div class=" flex flex-col items-center md:items-start  gap-8 py-28">
          <div class=" title-services flex flex-col gap-4">
-        <p class="text-4xl font-bold">¿Que ofrecemos?</p>
-        <p class="text-lg font-medium mt-2">Diseñamos y transformamos espacios con soluciones a medida para cada necesidad.</p>
+        <p class="text-xl md:text-4xl font-bold">¿Que ofrecemos?</p>
+        <p class="text-md md:text-lg font-medium mt-2">Diseñamos y transformamos espacios con soluciones a medida para cada necesidad.</p>
     </div>
-<div class="cards-components services-container flex gap-10">
+<div class="cards-components  flex md:flex-row flex-col gap-10 justify-center items-center">
     @for (service of services; track service.id) {
     <app-card-services [title]="service.title" [imageUrl]="service.imageUrl" [hoverText]="service.hoverText">
     </app-card-services>
