--- a/src/app/shared/components/card-services/card-services.component.html
+++ b/src/app/shared/components/card-services/card-services.component.html
@@ -1,15 +1,19 @@
-<div class="card flex flex-col justify-end items-center w-[340px] h-[408px] rounded-[20px] bg-gradient-to-t from-black/20 to-black/20 bg-cover bg-no-repeat shadow-lg relative group"
+<div class="card flex flex-col justify-end items-center w-[240px] h-[308px] md:w-[340px] md:h-[408px] rounded-[20px] bg-gradient-to-t from-black/20 to-black/20 bg-cover bg-no-repeat shadow-lg relative group"
     [style.backgroundImage]="'url(' + imageUrl + ')'">
+  
     <div
-        class="text-hover rounded-[20px] absolute inset-0 bg-orange-500/60 backdrop-blur-sm opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        class=" text-hover rounded-[20px] absolute inset-0 bg-orange-500/60 backdrop-blur-sm opacity-0 group-hover:opacity-100 transition-opacity duration-300">
     </div>
     <div
-        class="absolute inset-0 flex flex-col items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 gap-3 ">
-        <div class="w-[235px] card-title  text-white font-semibold text-2xl">{{ title }}</div>
-        <div class="w-[235px] card-title  text-white font-semibold text-xl">{{ hoverText }}</div>
+        class=" absolute inset-0 flex flex-col items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 gap-3 ">
+        <div class="w-[200px] md:w-[235px] card-title  text-white font-semibold text-2xl">{{ title }}</div>
+        <div class=" w-[200px] md:w-[235px] card-title  text-white font-semibold text-xl">{{ hoverText }}</div>
     </div>
+
     <div
-        class="relative w-full py-4 rounded-b-[20px] flex items-center justify-center group-hover:opacity-0 transition-opacity duration-300 backdrop-blur-sm bg-orange-500/60 ">
+        class="relative flex-col w-full py-4 rounded-b-[20px] flex items-center justify-center group-hover:opacity-0 transition-opacity duration-300 backdrop-blur-sm bg-orange-500/60 ">
         <p class="card-title text-center text-white font-semibold text-lg">{{ title }}</p>
-    </div>
+        <div class=" md:hidden w-[200px] md:w-[235px] card-title  text-white font-semibold text-sm">{{ hoverText }}</div>
+    </div> 
+   
 </div>
