--- a/src/app/shared/components/shared-button/shared-button.component.html
+++ b/src/app/shared/components/shared-button/shared-button.component.html
@@ -1,4 +1,5 @@
 <button
-    class="flex w-full justify-center items-center gap-2 px-5 py-3 text-2xl font-semibold rounded-[20px] bg-[#D77200] hover:bg-orange-500 shadow-md shadow-black/25">
+    [routerLink]="['/contact']"
+    class="flex w-full justify-center items-center gap-2 px-5 py-3 text-xl sm:text-xl lg:text-2xl font-semibold rounded-[20px] bg-[#D77200] hover:bg-orange-500 shadow-md shadow-black/25">
     {{ titleButton() }}
 </button>
