--- a/src/app/pages/ourservices/ourservices.component.html
+++ b/src/app/pages/ourservices/ourservices.component.html
@@ -1,10 +1,10 @@
- <section class="container-services text-[#FCFAF8] flex  md:flex-col justify-center items-center  " >
+ <section class="container-services text-[#FCFAF8] flex  md:flex-col justify-center items-center min-h-screen " >
     <div class=" flex flex-col items-center md:items-start  gap-8 py-28">
-         <div class=" title-services flex flex-col gap-4">
+         <div class=" w-[240px] md:w-[400px] lg:w-auto title-services flex flex-col gap-4">
         <p class="text-xl md:text-4xl font-bold">¿Que ofrecemos?</p>
         <p class="text-md md:text-lg font-medium mt-2">Diseñamos y transformamos espacios con soluciones a medida para cada necesidad.</p>
     </div>
-<div class="cards-components  flex md:flex-row flex-col gap-10 justify-center items-center">
+<div class="cards-components  flex lg:flex-row flex-col gap-10 justify-center items-center">
     @for (service of services; track service.id) {
     <app-card-services [title]="service.title" [imageUrl]="service.imageUrl" [hoverText]="service.hoverText">
     </app-card-services>
