--- a/src/app/pages/ourservices/ourservices.component.html
+++ b/src/app/pages/ourservices/ourservices.component.html
@@ -1,4 +1,4 @@
- <section class="container-services text-[#FCFAF8] flex  md:flex-col justify-center items-center min-h-screen " >
+ <section class="container-services text-[#FCFAF8] flex  md:flex-col justify-center items-center w-full " >
     <div class=" flex flex-col items-center md:items-start  gap-8 py-28">
          <div class=" w-[240px] md:w-[400px] lg:w-auto title-services flex flex-col gap-4">
         <p class="text-xl md:text-4xl font-bold">¿Que ofrecemos?</p>
