--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav
-    class="absolute z-10 w-full flex justify-between transition-colors duration-300 bg-transparent ring-white ring-1 px-5 py-4 ">
+    class="absolute z-10 w-full flex justify-between transition-colors duration-300 bg-transparent  px-5 py-4 ">
 
     <div>
-        <a [routerLink]="['/']" class="text-white uppercase font-bold cursor-pointer py-2">
+        <a [routerLink]="['/']" class="text-white  font-bold cursor-pointer py-2">
             Croma.I
         </a>
     </div>
@@ -18,19 +18,19 @@
     <ul [class.hidden]="!isMenuOpen"
         class="absolute top-[70px] right-0 bg-opacity-80 text-white list-none p-4 rounded-md flex flex-col gap-4 lg:static lg:flex lg:flex-row lg:gap-5 lg:bg-transparent lg:bg-opacity-0 lg:p-0 lg:rounded-none backdrop-blur-sm sm:backdrop-blur-none bg-orange-500/60">
         <li>
-            <a [routerLink]="['/']" class="uppercase font-bold cursor-pointer px-4 py-2 ring-bottom">Inicio</a>
+            <a [routerLink]="['/']" class=" font-bold cursor-pointer px-4 py-2 ring-bottom">Inicio</a>
         </li>
         <li>
-            <a [routerLink]="['/about']" class="uppercase font-bold cursor-pointer px-4 py-2 ring-bottom">Sobre
+            <a [routerLink]="['/about']" class=" font-bold cursor-pointer px-4 py-2 ring-bottom">Sobre
                 Nosotros</a>
         </li>
         <li>
             <a [routerLink]="['/ourservices']"
-                class="uppercase font-bold cursor-pointer px-4 py-2 ring-bottom ">Servicios</a>
+                class=" font-bold cursor-pointer px-4 py-2 ring-bottom ">Servicios</a>
         </li>
         <li>
             <a [routerLink]="['/contact']"
-                class="uppercase font-bold cursor-pointer px-4 py-2 ring-bottom">Contacto</a>
+                class=" font-bold cursor-pointer px-4 py-2 ring-bottom">Contacto</a>
         </li>
     </ul>
 </nav>
