--- a/src/app/shared/components/card-services/card-services.component.html
+++ b/src/app/shared/components/card-services/card-services.component.html
@@ -12,9 +12,9 @@
     </div>
 
     <div
-        class="relative flex-col w-full py-4 rounded-b-[20px] flex items-center justify-center sm:group-hover:opacity-0 transition-opacity duration-300 backdrop-blur-[1px] bg-orange-500/70 ">
-        <p class="card-title text-center text-white font-semibold text-lg">{{ title }}</p>
-        <div class=" md:hidden w-[200px] md:w-[235px] card-title  text-white font-semibold text-sm">{{ hoverText }}</div>
+        class="relative flex-col w-full py-4 rounded-b-[20px] flex px-6 sm:items-center sm:group-hover:opacity-0 transition-opacity duration-300 backdrop-blur-[1px] bg-orange-500/70 ">
+        <p class=" text-white font-semibold text-lg">{{ title }}</p>
+        <div class=" md:hidden w-[200px] md:w-[235px]  text-white font-semibold text-sm">{{ hoverText }}</div>
     </div> 
    
 </div>
