--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.animation {
+  animation: anim 2s ease 0s 1 normal forwards;
+}
+@keyframes anim {
+  from {
+    transform: scale(0.7);
+    transform-origin: 0% 50%;
+  }
+
+  to {
+    transform: scale(1);
+    transform-origin: 0% 50%;
+  }
+}
