--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,7 +2,7 @@
 
     <div class="animation-mobile flex flex-col md:flex-row gap-6 justify-center items-center ">
         <div [style.backgroundImage]="'url(' + imageUrl + ')'"
-            class="animation-1 rounded-[20px] w-[300px] sm:w-[600px]  bg-cover bg-center  ">
+            class="animation-about-1 rounded-[20px] w-[300px] sm:w-[600px]  bg-cover bg-center  ">
             <div
                 class=" relative flex-col w-[300px] sm:w-[600px] py-4 rounded-[20px] flex items-center justify-center bg-cover bg-center transition-opacity duration-300 backdrop-blur-[2px] bg-[#D77200]/70 h-[400px] sm:h-[590px]">
                 <div>
@@ -26,7 +26,7 @@
         </div>
 
         <div>
-            <div class="animation-2 sm:hidden w-[300px]  h-[400px] pb-6">
+            <div class="animation-about-2 sm:hidden w-[300px]  h-[400px] pb-6">
                 <img src="/assets/images/team-4.jpg" alt="imagen"
                     class="w-full h-full object-cover rounded-lg" />
             </div>
@@ -40,7 +40,7 @@
             </div>
 
             <div
-                class="animation-3 flex items-center p-10 md:p-12 w-[300px] sm:w-[600px] bg-[#D77200]  h-[400px] md:h-[290px] rounded-[20px]">
+                class="animation-about-3 flex items-center p-10 md:p-12 w-[300px] sm:w-[600px] bg-[#D77200]  h-[400px] md:h-[290px] rounded-[20px]">
                 <div class="flex flex-col w-full justify-center gap-4">
                     <p class="text-xl md:text-4xl font-bold">Nuestra Historia</p>
                     <p class="text-lg md:text-2xl font-medium">Desde nuestros inicios, en Croma Interiorismo nos hemos
