--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
 <section class="container-contact flex justify-center items-center min-h-screen bg-orange-100">
     <div
-        class="animation flex flex-col justify-between items-center w-[90%] md:w-[800px] p-6 md:p-10 rounded-[20px] bg-[rgba(219,134,39,0.60)] shadow-md backdrop-blur-[4px] gap-4 md:gap-5">
+        class="animation-contact flex flex-col justify-between items-center w-[90%] md:w-[800px] p-6 md:p-10 rounded-[20px] bg-[rgba(219,134,39,0.60)] shadow-md backdrop-blur-[4px] gap-4 md:gap-5">
 
         <p class="text-white text-2xl md:text-4xl font-bold mb-2 md:mb-4 text-center">
             {{ titulo }}
