--- a/src/styles.css
+++ b/src/styles.css
@@ -4,17 +4,70 @@
 @tailwind utilities;
 
 
-.animation {
-  animation: anim 2s ease 0s 1 normal forwards;
-}
-@keyframes anim {
-  from {
-    transform: scale(0.7);
-    transform-origin: 0% 50%;
-  }
+.animation-home {
+  animation: anim3 2s ease 0s 1 normal forwards;
 
+}
+.animation-contact{
+    animation: anim3 2s ease 0s 1 normal forwards;
+}
+.cards-components{
+    animation: anim3 2s ease 0s 1 normal forwards;
+}
+.title-services{
+animation: anim2 2s ease 0s 1 normal forwards;
+}
+@media (min-width: 768px) {
+  .animation-about-1 {
+    animation: anim1 2s ease 0s 1 normal forwards;
+  }
+  .animation-about-2 {
+    animation: anim2 2s ease 0s 1 normal forwards;
+  }
+  .animation-about-3 {
+    animation: anim3 2s ease 0s 1 normal forwards;
+  }
+}
+@media (max-width: 767px) {
+  .animation-mobile {
+    animation: anim3 2s ease 0s 1 normal forwards;
+  }
+}
+
+@keyframes animCenter {
+	from{
+		transform: scaleY(0.4);
+	}
+
+	to {
+		transform: scaleY(1);
+	}
+}
+
+
+@keyframes anim1 {
+  from {
+    transform: translateX(-50px);
+  }
   to {
-    transform: scale(1);
-    transform-origin: 0% 50%;
+    transform: translateX(0);
+  }
+}
+
+@keyframes anim2 {
+  from {
+    transform: translateX(50px);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes anim3 {
+  from {
+    transform: translateY(50px);
+  }
+  to {
+    transform: translateY(0);
   }
 }
