--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <section class="container-about py-28 flex justify-center items-center">
 
-    <div class="animation-mobile flex flex-col md:flex-row gap-6 justify-center items-center ">
+    <div class="allSections animation-mobile flex flex-col md:flex-row gap-6 justify-center items-center ">
         <div [style.backgroundImage]="'url(' + imageUrl + ')'"
             class="animation-about-1 rounded-[20px] w-[300px] sm:w-[600px]  bg-cover bg-center  ">
             <div
