--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class=" container-home  flex justify-center items-center md:py-16  ">
+<section class="allSections container-home  flex justify-center items-center md:py-16  ">
     <div class="animation-home flex justify-center w-[900px] flex-col text-center text-white gap-8 md:gap-5 m-10 ">
         <p class="text-5xl md:text-6xl lg:text-8xl text-start font-bold">{{ tituloInicio }}</p>
         <p class="text-start text-2xl md:text-2xl lg:text-3xl mt-4">{{ descripcionInicio }}</p>
