--- a/src/app/shared/components/card-services/card-services.component.html
+++ b/src/app/shared/components/card-services/card-services.component.html
@@ -8,13 +8,13 @@
     <div
         class=" absolute inset-0 flex flex-col items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 gap-3 ">
         <div class=" hidden  sm:flex md:w-[235px] card-title  text-white font-semibold text-2xl">{{ title }}</div>
-        <div class=" hidden  sm:flex md:w-[235px] card-title  text-white font-semibold text-xl">{{ hoverText }}</div>
+        <div class=" hidden  sm:flex md:w-[235px] card-title  text-white font-semibold text-xl">{{ text }}</div>
     </div>
 
     <div
         class="relative flex-col w-full py-4 rounded-b-[20px] flex px-6 sm:items-center sm:group-hover:opacity-0 transition-opacity duration-300 backdrop-blur-[1px] bg-orange-500/70 ">
         <p class=" text-white font-semibold text-lg">{{ title }}</p>
-        <div class=" md:hidden w-[200px] md:w-[235px]  text-white font-semibold text-sm">{{ hoverText }}</div>
+        <div class=" md:hidden w-[200px] md:w-[235px]  text-white font-semibold text-sm">{{ text }}</div>
     </div> 
    
 </div>
